--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
                 </li>
                 <li>
                     <a href="index.html">Home</a>
-                </li>
-                
-                
+                </li>  
             </ul>
         </nav>
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why love running with us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distances and times
