--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
             </li>
