--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="#">Sign Up</a>
